# fail2drop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: dropped.cpp  fail2drop.cpp  proceeder.cpp  util.cpp
src/include/: dropped.h  fail2drop.h  proceeder.h  util.h
